# al-demo

./: .gitignore  Project.md  README.md  al-demo.code-workspace  package-lock.json  package.json  project.code-workspace
.cursor/plans/: casetype_seeder_system_d1aaae56.plan.md  source_document_upload_feature_719f5e0f.plan.md
.cursor/rules/: code-comments.mdc  documentation.mdc  npm-workspace.mdc  system-documentation.mdc
api/: .env.example  .gitignore  pyproject.toml
api/app/: config.py  main.py
api/app/prompts/: extraction.py
api/app/routes/: documents.py  enqueue.py  worker.py
api/app/routes/users/: __init__.py
api/app/services/: enqueue_service.py  extraction_service.py  firebase.py  generation_service.py  storage.py  task_dispatcher.py
api/scripts/: fix.sh  lint.sh
apps/web/: .env.example  .prettierignore  package.json  proxy.ts  tsconfig.json
apps/web/actions/: auth.ts  case-readiness.ts  cases.ts  uploads.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: app-layout-client.tsx  app-sidebar.tsx  login-form.tsx  nav-actions.tsx  nav-user.tsx  signup-form.tsx
apps/web/hooks/: use-toast.ts
apps/web/lib/: auth-errors.ts  enqueue-api.ts  firebase-admin.ts  firebase.ts  user-context.tsx  utils.ts
docs/: ARCHITECTURE.md  FIRESTORE_RULES.md  STORAGE_STRUCTURE.md  USER_FLOWS.md  extraction-results.md  seed.md
docs/system/: ARCHITECTURE.md  AUTH.md  FIRESTORE_STRUCTURE.md  STORAGE_STRUCTURE.md  USER_FLOWS.md
firebase/: .firebaserc  firestore.indexes.json  firestore.rules  storage.cors.json  storage.rules
seed/: seed.ts
(+54 files in other folders)
